Tweak spacing to avoid text tools wrapping out of the toolbar

--- a/trunk/src/main/resources/org/cast/cwm/drawtool/cast/css/cast.css
+++ b/trunk/src/main/resources/org/cast/cwm/drawtool/cast/css/cast.css
@@ -29,6 +29,7 @@ body {
 	line-height: 14px;
 	font-size: 1.5em;
 	top:1px;
+    min-width: 12px;
 }
 
 #svg_editor #fill_color,
